improved : contact information should be on one row in topbar on mobile devices. fixes #1805

--- a/assets/front/scss/0_2_header/_topbar.scss
+++ b/assets/front/scss/0_2_header/_topbar.scss
@@ -37,12 +37,13 @@
   //contact info and social blocks one on top of each other
   @include media-breakpoint-down(xs) {
     width: 100%;
-    & ul {
-      //contact info items one on top of each other x-small devices
-      @at-root .topbar-contact__info li {
-        width: 100%;
-      }
-    }
+    // commented in feb 2020 to fix https://github.com/presscustomizr/customizr/issues/1805
+    // & ul {
+    //   //contact info items one on top of each other x-small devices
+    //   @at-root .topbar-contact__info li {
+    //     width: 100%;
+    //   }
+    // }
   }
 }
 .topbar-nav__nav,
